--- a/styles/_maincontent.scss
+++ b/styles/_maincontent.scss
@@ -3,34 +3,88 @@
     width: 100%;
     flex-wrap: wrap;
     justify-content: center;
+    background-color: rgb(230, 226, 205);
 
     .card { // styling here will affect each individual card
-
-        border: 1px solid black;
+        color: rgb(98, 183, 189);
+        border: 2px solid rgb(127, 196, 100);
+        border-radius: 15px;
+        box-shadow: 5px 10px 8px #4f4f4f;
         flex: 1;
         max-width: 250px;
-        margin: 5px;
+        margin: .5rem 1rem;
         position: relative;
+        transition: opacity 1500ms;
+        will-change: opacity;
+        background-color: rgb(77, 63, 97);
+        background: linear-gradient(
+            to bottom, 
+            rgb(77, 63, 97) 0%, 
+            rgb(77, 63, 97) 50%, 
+            rgb(101, 82, 128) 50%, 
+            rgb(101, 82, 128) 100%
+        );
 
         h2 {
-            font-size: 2rem;
-            font-family: 'Poppins', sans-serif;
+            font-size: 4rem;
+            letter-spacing: 1px;
             font-weight: 300;
+            text-align: center;
+            margin: 10px;
+            margin-top: 4rem;
         }
 
+        h3 {
+            font-size: 3rem;
+            letter-spacing: 1px;
+            text-align: center;
+            color: rgb(119, 173, 119);
+        }
+        
         .close-btn {
             position: absolute;
-            top: 0;
-            right: 0;
-            cursor: pointer;
+            top: 0px;
+            right: 10px;
+            color: rgb(196, 100, 100);
             font-family: 'Poppins', sans-serif;
-            font-size: 2rem;
+            cursor: pointer;
+            font-size: 3rem;
             font-weight: 600;
         }
 
         img {
             width: 250px;
+            margin-bottom: 1rem;
         }
 
     }
+}
+
+.card.faded-out {
+    opacity: 0;
+}
+
+
+.img-container {
+    width: 100vw;
+    height: 90vh;
+    background-color: rgb(108, 108, 108);
+    
+
+    img {
+        object-fit: cover;
+        width: 100vw;
+        height: 100%;
+        opacity: 0.8;
+    }
+}
+
+#card-holder {
+    display: flex;
+    overflow: scroll;
+    margin: 3rem;
+    background-color: rgb(182, 177, 155);
+    width: 95%;
+    padding: 2rem 1.5rem;
+    border-radius: 15px;
 }
